--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   ota_update: ^6.0.0
   signature: ^5.5.0
   icons_launcher: ^3.0.0
+  flutter_blue_plus: ^1.34.5
+  bluetooth_classic: ^0.0.2
 
 dev_dependencies:
   flutter_test:
