--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,11 +43,11 @@ dependencies:
   flutter_datetime_picker_plus: ^2.2.0
   dropdown_search: ^5.0.6 #^5.0.6
   masked_text: ^1.1.2
-  ota_update: ^6.0.0
   signature: ^5.5.0
   icons_launcher: ^3.0.0
-  flutter_blue_plus: ^1.34.5
-  bluetooth_classic: ^0.0.2
+  #flutter_blue_plus: ^1.34.5
+  #bluetooth_classic: ^0.0.2
+  ota_update: ^6.0.0
 
 dev_dependencies:
   flutter_test:
