--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   #flutter_blue_plus: ^1.34.5
   #bluetooth_classic: ^0.0.2
   ota_update: ^6.0.0
+  bluetooth_classic: ^0.0.2
+  permission_handler: ^11.3.1
 
 dev_dependencies:
   flutter_test:
