--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   ota_update: ^6.0.0
   bluetooth_classic: ^0.0.2
   permission_handler: ^11.3.1
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
