--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   bluetooth_classic: ^0.0.2
   permission_handler: ^11.3.1
   badges: ^3.1.2
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
