--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   permission_handler: ^11.3.1
   badges: ^3.1.2
   intl: ^0.20.2
+  font_awesome_flutter: ^10.8.0
 
 dev_dependencies:
   flutter_test:
