--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,9 @@ dependencies:
   intl: ^0.20.2
   font_awesome_flutter: ^10.8.0
   url_launcher: ^6.3.1
+  flutter_pdfview: 1.3.4
+  path_provider: ^2.1.4
+
 
 dev_dependencies:
   flutter_test:
